<resources>
    <string name="app_name">MultipleActivityHandling</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="name">Name</string>
    <string name="passwordHint">Password hint</string>
    <string name="about">About You</string>
    <string name="signup">SignUp</string>
    <string name="Dummy">Dummy</string>
    <string name="age">Age</string>
</resources>