<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="415dp"
        android:layout_height="523dp"
        android:src="@drawable/f3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/f3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="200dp"
        android:text="Si"
        android:textSize="96sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="110dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="200dp"
        android:text="gn"
        android:textColor="#FFFFFF"
        android:textSize="96sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="110dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="200dp"
        android:text="up"
        android:textSize="96sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="256dp"
        tools:layout_editor_absoluteY="110dp" />

    <EditText
        android:id="@+id/nameETV_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="490dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="397dp" />

    <EditText
        android:id="@+id/emailETV_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="560dp"
        android:autofillHints=""
        android:editable="false"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="463dp" />

    <EditText
        android:id="@+id/passwordPETV_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="630dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="537dp" />

    <EditText
        android:id="@+id/passwordHintPassETV_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="700dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="603dp" />

    <EditText
        android:id="@+id/aboutETV_A"
        android:layout_width="158dp"
        android:layout_height="74dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="670dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/about"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColorHint="#8D6E63"
        tools:ignore="MissingConstraints,RtlCompat"
        tools:layout_editor_absoluteX="241dp"
        tools:layout_editor_absoluteY="525dp" />

    <EditText
        android:id="@+id/AgeENV_A"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="632dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="870dp">

        <RadioButton
            android:id="@+id/mailRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="510dp"
            android:text="Male"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="241dp"
            tools:layout_editor_absoluteY="394dp" />

        <RadioButton
            android:id="@+id/femaleRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="0dp"
            android:text="Female"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="241dp"
            tools:layout_editor_absoluteY="463dp" />
    </RadioGroup>

    <Button
        android:id="@+id/createBTN_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="750dp"
        android:backgroundTint="#FDC006"
        android:text="@string/signup"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="667dp" />

</RelativeLayout>